add_subdirectory(Quad)
add_subdirectory(Texture)
add_subdirectory(MultipleSubpass)
add_subdirectory(InputAttachment)
add_subdirectory(UniformBuffer)
add_subdirectory(PushConstant)
add_subdirectory(Instancing)
add_subdirectory(Model)
add_subdirectory(PhongShading)
add_subdirectory(NormalMapping)
add_subdirectory(MSAA)
add_subdirectory(Mirror)
add_subdirectory(PBRT)